# compass

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  run.sh  version.h.in
compass/: CMakeLists.txt
compass/include/: compass.h
compass/src/: application.cpp  application.h  defines.h  entry-point.h
compass/src/core/: application.cpp  application.h  entry-point.h  entrypoint.cpp  entrypoint.h  logger.cpp  logger.h
compass/src/platform/: platform.cpp  platform.h  windows-platform.cpp  windows-platform.h  windows_platform.cpp
lab/: CMakeLists.txt
lab/src/: lab-application.cpp  lab.cpp  lab.h
